--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <div class="h1">
 <h1>Xanthrons</h1>
+<h6>One for All, All for One</h6></h6>
     <!-- <h5 id="subHeading">
       ONE FOR ALL, ALL FOR ONE
     </h5> -->
@@ -63,15 +64,14 @@
     </div>
     <!-- ..........map......... -->
     <hr>
-    <div class="menu">
+    <!-- <div class="menu">
       <!-- //<a href="https://www.google.com/maps/dir/23.1713234,77.4782782/Nature+Cottage,+to,+Barkhedi+Kalan,+National+Law+Institute+University,+Bhopal,+Madhya+Pradesh/@23.1961711,77.3853167,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x397c5cc60a4c7d99:0xf59e6a097477416c!2m2!1d77.3682664!2d23.1985664">map</a> -->
-      <img  class="noAL"  src="image1\map.jpg" alt="noAlcohol picture">
-      <h2> Know Venue</h2>
-      <p>This is just to make you familiar with Event Venue</p>
-      <button type="button" class="btn btn-primary" onclick="myFunction()"  name="button">Facebook</button>
-      <button type="button" class="btn btn-primary" onclick="mapFunction()" name-"button">map</button>
+      <!-- <img  class="noAL"  src="image1\fMenu.png" alt="Food Menu picture">
+      <h2>MENUS</h2>
+      <p>This is just to make you familiar with Event Venue</p> -->
 
-    </div>
+
+    </div> -->
     <div class="contact-me">
 
 
