my friend forced

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,38 +17,49 @@
     <!-- <img class="top-cloud" src="image1\cloud.png" alt="cloud"> -->
 
 <div class="h1">
-<h1>Xanthrons</h1>
-<h6>One for All, All for One</h6></h6>
+  <div class="container">
+    <div class="image-placeholder left">
+      <!-- <img src="image1\med-sign.jpeg" alt="Medical Sign"> -->
+    </div>
+    <h1>Scrubbing out in style: Farewell bash</h1>
+    <div class="image-placeholder right"></div>
+  </div>
+
+<h6>FAREWELL INVITATION</h6>
     <!-- <h5 id="subHeading">
       ONE FOR ALL, ALL FOR ONE
     </h5> -->
     </div>
-    <p>Batch Party</p>
-    <img  src="image1\MHK.jpg" alt="mountain" id="rcHotelPic">
+     <p id="intro">
+      As we embark on the next chapter in our medical careers, it's time to celebrate the incredible journey we've shared at LNMC medical college. 
+      We'd like to invite you to a farewell gathering to reminisce about the late nights studying, the challenges we overcame, and the friendships forged in these hallowed halls.
+    </p>
+    
+    <!-- <img  src="image1\MHK.jpg" alt="mountain" id="rcHotelPic"> -->
 
   </div>
 
   <div class="middle-container">
     <div class="profile">
       <img class="noAL" src="image1\noAlcohol.png" alt="noAlcohol picture">
-      <h2> October 2</h2>
-      <p>As we all know importance of this date, so neither Authority nor the Organising Committee going to allow any sort of smoking and drinking during the event.  </p>
+      <h3>Symbol pe mat ja re bawa</h3>
+      <p>"At the farewell fête, let spirits soar high,<br>
+        But remember, in moderation, lest you kiss the sky!"<br>
+       </p>
     </div>
     <hr>
     <div class="skills">
       <div class="skill-row">
         <img class="code-skill-pic" src="image1\tPort.png" alt="skills-coding">
         <h3>Transportation</h3>
-        <p>To make this event more accessible and risk free,we are provinding</p>
-        <ul>
-          <li>Public Transportation</li>
-          <li>Both ON and OFF</li>
-        </ul>
+       <p>"For the farewell bash, forget the norm,<br>
+        Arrive in style, whether by bike, car, or unicorn!"</p>
       </div>
       <div class="skill-row">
         <img class="momo" src="image1\DressCode1.png" alt="skill">
-        <h3>Dress Code</h3>
-        <p>As per Individual Choice</p>
+        <h3>Dress code for the farewell: </h3>
+        <p>"wear your quirkiest attire,<br>
+          Let's bid adieu in style, with fashion that sets hearts on fire!"</p>
       </div>
     </div>
     <hr>
@@ -56,22 +68,27 @@
       <!-- //<a href="https://www.google.com/maps/dir/23.1713234,77.4782782/Nature+Cottage,+to,+Barkhedi+Kalan,+National+Law+Institute+University,+Bhopal,+Madhya+Pradesh/@23.1961711,77.3853167,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x397c5cc60a4c7d99:0xf59e6a097477416c!2m2!1d77.3682664!2d23.1985664">map</a> -->
       <img  class="noAL"  src="image1\map.jpg" alt="noAlcohol picture">
       <h2> Know Venue</h2>
-      <p>This is just to make you familiar with Event Venue</p>
+      <p>In the tapestry of farewells, let's weave a thread of delight,<br>
+        With laughter echoing and emotions taking flight.<br>
+        For in this moment, let's cherish and unite,<br>
+        Inspiring each of us to attend, shining bright.</p>
+      <!-- <p>This is just to make you familiar with Event Venue</p> -->
+      
 
-      <button type="button" class="btn btn-primary" onclick="myFunction()"  name="button">Facebook</button>
+      <button type="button" class="btn btn-primary" onclick="myFunction()"  name="button">RSVP</button>
       <button type="button" class="btn btn-primary" onclick="mapFunction()">map</button>
 
     </div>
     <!-- ..........map......... -->
     <hr>
     <!-- <div class="menu">
-      <!-- //<a href="https://www.google.com/maps/dir/23.1713234,77.4782782/Nature+Cottage,+to,+Barkhedi+Kalan,+National+Law+Institute+University,+Bhopal,+Madhya+Pradesh/@23.1961711,77.3853167,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x397c5cc60a4c7d99:0xf59e6a097477416c!2m2!1d77.3682664!2d23.1985664">map</a> -->
+      //<a href="https://www.google.com/maps/dir/23.1713234,77.4782782/Nature+Cottage,+to,+Barkhedi+Kalan,+National+Law+Institute+University,+Bhopal,+Madhya+Pradesh/@23.1961711,77.3853167,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x397c5cc60a4c7d99:0xf59e6a097477416c!2m2!1d77.3682664!2d23.1985664">map</a> -->
       <!-- <img  class="noAL"  src="image1\fMenu.png" alt="Food Menu picture">
       <h2>MENUS</h2>
       <p>This is just to make you familiar with Event Venue</p> -->
 
 
-    </div> -->
+    </div> 
     <div class="contact-me">
 
 
@@ -82,7 +99,7 @@
   <div class="bottom-container">
 
     <p>Designed By:</p>
-    <a href="https://pintu4146.github.io/PINTU/">Pintu Kumar</a>
+    <a href="https://pintu4146.github.io/PINTU/">Pintu </a>
   </div>
   <script src="index.js"></script>
 
