--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <div class="h1">
   <div class="container">
-    <div class="image-placeholder left">
-      <!-- <img src="image1\med-sign.jpeg" alt="Medical Sign"> -->
-    </div>
+    <!-- <div class="image-placeholder left">
+     <img src="image1\med-sign.jpeg" alt="Medical Sign"> -->
+    </div> 
     <h1>Scrubbing out in style: Farewell bash</h1>
-    <div class="image-placeholder right"></div>
+    <!-- <div class="image-placeholder right"></div> -->
   </div>
 
 <h6>FAREWELL INVITATION</h6>
