--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h2>See You There!</h2>
           <p class="shayari">
             <span class="funny">Kuch pal hasi, kuch pal aansu, yahi hai yaari ki raas!</span><br>
-            <span class="emotional">Medical college se yeh vida, bhul na payenge  kabhi hum yaar!</span>
+            <span class="emotional">Medical college se yeh vidai, bhul na payenge  kabhi hum yaar!</span>
           </p>
         
           <div class="calendar-mark">
